Building docker image for Vagrant/leiningen